.usingRecursiveComparison() .ignoringFields("book")